# llama-cpp-server-py

./: .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: build-server.yml  release-pypi.yml
docs/: development.md  upgrade_llama.cpp.md
llama-cpp-server-py/: pyproject.toml
llama-cpp-server-py-avx/: README.md  pyproject.toml
llama-cpp-server-py-avx/src/llama_cpp_server_py_avx/: __init__.py
llama-cpp-server-py-avx512/: README.md  pyproject.toml
llama-cpp-server-py-avx512/src/llama_cpp_server_py_avx512/: __init__.py
llama-cpp-server-py-core/: pyproject.toml
llama-cpp-server-py-core/llama_cpp_server_py_core/: __init__.py  api_models.py  utils.py
llama-cpp-server-py-cuda/: README.md  pyproject.toml
llama-cpp-server-py-cuda/src/llama_cpp_server_py_cuda/: __init__.py
llama-cpp-server-py/src/llama_cpp_server_py/: __init__.py
patches/: llama.cpp.patch
scripts/: apply-patch.sh  build.sh  setup.sh  sync_version.py
